updating ansible windows list

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,13 +1,8 @@
 --- # Main playbook
 - name: Base Setup for new system
-  hosts: homelab
+  hosts: local
   gather_facts: true
   roles:
     - shell
     - base
     - asdf
-  tasks:
-    - name: Windows Setup
-      ansible.builtin.include_role:
-        name: windows
-      when: "ansible_facts['os_family'] == 'windows'"
