--- a/roles/windows/tasks/main.yml
+++ b/roles/windows/tasks/main.yml
@@ -1,24 +1,19 @@
 ---
 # tasks file for windows
 - name: Install windows apps
-  chocolatey.chocolatey.win_chocolatey:
+  community.windows.win_scoop:
     name: "{{ item }}"
     state: present
   loop:
-    - 7zip
-    - discord
-    - docker-desktop
     - firefox
-    - krita
-    - microsoft-windows-terminal
-    - powertoys
-    - prometheus-wmi-exporter
-    - slack
+    - obsidian
+    - obs-studio
     - spotify
+    - discord
+    - gimp
+    - krita
     - steam
-    - vlc
-    - zeal
-    - zoom
-    - alacritty
+    - flameshot
+    - windows-terminal
   tags:
     - windows
