--- a/roles/homelab/tasks/main.yml
+++ b/roles/homelab/tasks/main.yml
@@ -48,7 +48,7 @@
       ansible.builtin.wait_for_connection:
         delay: 30
         timeout: 300
-    - name: Cordon node
+    - name: Uncordon node
       kubernetes.core.k8s_drain:
         state: uncordon
         name: "{{ inventory_hostname }}"
