--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,7 @@ jobs:
         uses: ansible/ansible-lint-action@main
       - name: Notify
         uses: appleboy/telegram-action@master
+        if: ${{ always() }}
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
