--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,28 +1,21 @@
 - name: Install applications for Ubuntu
-  become: true
-  become_method: ansible.builtin.sudo
   tags:
     - pkg
   block:
     - name: 'Create user'
       ansible.builtin.user:
-        name: '{{ USER }}'
+        name: '{{ user }}'
         state: present
         create_home: true
     - name: 'Update Cache'
       ansible.builtin.apt:
         update_cache: true
-    - name: 'Check workstation'
-      ansible.builtin.stat:
-        path: /usr/bin/cinc
-      register: cinc_installed
-    - name: 'Download Cinc Workstation'
-      ansible.builtin.get_url:
-        url: https://omnitruck.cinc.sh/install.sh
-        dest: /tmp/install.sh
-        mode: '755'
-      when: not cinc_installed.stat.exists
-    - name: 'Cinc Workstation'
-      ansible.builtin.command:
-        cmd: /tmp/install.sh -P cinc-workstation -v 22
-      when: not cinc_installed.stat.exists
+    - name: 'Create base git folder'
+      ansible.builtin.file:
+        state: directory
+        path: '{{ git_repo_base }}'
+    - name: 'Clone repos'
+      ansible.builtin.git:
+        repo: "https://github.com/{{ git_username }}/{{ item }}.git"
+        dest: "{{ git_repo_base }}/{{ item }}"
+      loop: '{{ git_repos }}'
