--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,15 +1,23 @@
 - name: Install applications for Ubuntu
   tags:
     - pkg
+  #TODO: Must install nerdfonts here
+  #https://github.com/ryanoasis/nerd-fonts/releases/download/v3.2.1/JetBrainsMono.zip
+  # setup neovim ppa unstable
+  # install neovim, i3, rofi
   block:
     - name: 'Create user'
       ansible.builtin.user:
         name: '{{ user }}'
         state: present
         create_home: true
-    - name: 'Update Cache'
+    - name: 'Install apps'
+      become: true
       ansible.builtin.apt:
-        update_cache: true
+        name: '{{ item }}'
+        state: present
+        update_cache: true 
+      loop: '{{ base_apps }}'
     - name: 'Create base git folder'
       ansible.builtin.file:
         state: directory
@@ -17,5 +25,5 @@
     - name: 'Clone repos'
       ansible.builtin.git:
         repo: "https://github.com/{{ git_username }}/{{ item }}.git"
-        dest: "{{ git_repo_base }}/{{ item }}"
+        dest: '{{ git_repo_base }}/{{ item }}'
       loop: '{{ git_repos }}'
