--- a/playbooks/restart.yaml
+++ b/playbooks/restart.yaml
@@ -1,38 +1,7 @@
 - name: Restarts the homelab machines
   hosts: homelab_nodes
   become: true
-  strategy: linear
-  #pre_tasks:
-  # - name: Set cluster on no allocation mode
-  #   ansible.builtin.uri:
-  #     url: "https://elastic.mvaldes.dev/_cluster/settings"
-  #     headers:
-  #       Authorization: "ApiKey {{ api_key }}"
-  #     method: PUT
-  #     body_format: json
-  #     body: '{"persistent": {"cluster.routing.allocation.enable": "primaries"}}'
-  #   run_once: true
-  #   ignore_errors: true
-  #   delegate_to: localhost
-  # - name: Flush cluster
-  #   ansible.builtin.uri:
-  #     url: https://elastic.mvaldes.dev/_flush
-  #     headers:
-  #       Authorization: "ApiKey {{ api_key }}"
-  #     method: POST
-  #   run_once: true
-  #post_tasks:
-  # - name: Set cluster on regular mode
-  #   ansible.builtin.uri:
-  #     url: https://elastic.mvaldes.dev/_cluster/settings
-  #     headers:
-  #       Authorization: "ApiKey {{ api_key }}"
-  #     method: PUT
-  #     body_format: json
-  #     body: '{"persistent": {"cluster.routing.allocation.enable": "all"}}'
-  #   run_once: true
-  #   ignore_errors: true
-  #   delegate_to: localhost
+  serial: 1
   tasks:
     - name: Run the role
       ansible.builtin.include_role:
