--- a/ansible.cfg
+++ b/ansible.cfg
@@ -221,7 +221,7 @@
 ;remote_user=
 
 # (pathspec) Colon separated paths in which Ansible will search for Roles.
-roles_path=/home/mvaldes/git/ansible_playbooks/roles
+roles_path=./roles
 
 # (string) Set the main callback used to display Ansible output. You can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
@@ -274,7 +274,7 @@ roles_path=/home/mvaldes/git/ansible_playbooks/roles
 
 # (path) The vault password file to use. Equivalent to --vault-password-file or --vault-id
 # If executable, it will be run and the resulting stdout will be used as the password.
-#vault_password_file=/home/nixos/psw
+;vault_password_file=/home/nixos/psw
 
 # (integer) Sets the default verbosity, equivalent to the number of ``-v`` passed in the command line.
 ;verbosity=0
