--- a/roles/homelab/tasks/main.yml
+++ b/roles/homelab/tasks/main.yml
@@ -1,13 +1,4 @@
 # tasks file for homelab
-- name: Check if needed
-  block:
-    - name: Check if update is needed
-      ansible.builtin.shell: "apt list --upgradable | grep -v 'Listing' | wc -l"
-      register: apt_update
-      changed_when: false
-    - name: Validate Updates
-      ansible.builtin.set_fact:
-        upgrade_available: "{{ apt_update.stdout | int > 0 }}"
 - name: Before Reboot
   block:
     - name: Node dependencies
@@ -30,6 +21,13 @@
         name: "*"
         state: latest
         update_cache: true
+    - name: Reboot the machine
+      ansible.builtin.reboot:
+        reboot_timeout: 300
+        pre_reboot_delay: 30
+- name: Prepare Reboot
+  connection: local
+  block:
     - name: Cordon node
       kubernetes.core.k8s_drain:
         state: cordon
@@ -45,13 +43,9 @@
           delete_emptydir_data: true
           force: true
           disable_eviction: true
-    - name: Pihole Update
-      ansible.builtin.shell: "pihole -up"
-      when: pihole
-    - name: Reboot the machine
-      ansible.builtin.reboot:
-        reboot_timeout: 300
-        pre_reboot_delay: 30
+- name: Post Reboot
+  connection: local
+  block:
     - name: Wait for machine
       ansible.builtin.wait_for_connection:
         delay: 30
