--- a/roles/homelab/tasks/before.yml
+++ b/roles/homelab/tasks/before.yml
@@ -1,3 +1,21 @@
+- name: debug
+  debug:
+    msg: "Running before tasks on {{ inventory_hostname }}"
+- name: Cordon node
+  kubernetes.core.k8s_drain:
+    state: cordon
+    name: "{{ inventory_hostname }}"
+    kubeconfig: "/home/{{ user }}/.kube/config"
+- name: Drain node
+  kubernetes.core.k8s_drain:
+    state: drain
+    name: "{{ inventory_hostname }}"
+    kubeconfig: "/home/{{ user }}/.kube/config"
+    delete_options:
+      ignore_daemonsets: true
+      delete_emptydir_data: true
+      force: true
+      disable_eviction: true
 - name: Vector Directory
   ansible.builtin.file:
     path: /opt/vector
@@ -8,8 +26,3 @@
     name: "*"
     state: latest
     update_cache: true
-- name: Reboot the machine
-  ansible.builtin.reboot:
-    reboot_timeout: 300
-    pre_reboot_delay: 30
-    test_command: whoami
