--- a/playbooks/restart.yaml
+++ b/playbooks/restart.yaml
@@ -1,6 +1,7 @@
 - name: Restarts the homelab machines
   hosts: homelab_nodes
-  become: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   serial: 1
   roles:
     - homelab
