--- a/roles/homelab/tasks/main.yml
+++ b/roles/homelab/tasks/main.yml
@@ -1,4 +1,18 @@
 # tasks file for homelab
+- name: Updates packages
+  become: true
+  ansible.builtin.apt:
+    name: "*"
+    state: latest
+    update_cache: true
+- name: Dependencies
+  become: true
+  ansible.builtin.apt:
+    name: "{{ item }}"
+    state: latest
+    update_cache: true
+  loop:
+    - python3-kubernetes
 - name: SSH Access Setup
   include_tasks:
     file: access.yml
@@ -16,6 +30,15 @@
         - before
   tags:
     - before
+- name: Reboot the machine
+  ansible.builtin.reboot:
+    reboot_timeout: 300
+    pre_reboot_delay: 30
+    test_command: whoami
+- name: Wait for machine
+  ansible.builtin.wait_for_connection:
+    delay: 30
+    timeout: 600
 - name: Prepare Reboot
   include_tasks:
     file: after.yml
