--- a/roles/base/vars/main.yml
+++ b/roles/base/vars/main.yml
@@ -2,52 +2,38 @@ user: 'mvaldes'
 git_repo_base: '$HOME/git'
 git_username: 'mvaldes14'
 git_repos:
-  - terraform
-  - terraform.nvim
+  - wiki
   - dotfiles
+  - k8s-apps
+  - twitch-bot
+  - blog
+  - terraform
   - dotfiles-nix
   - ansible_playbooks
-  - blog
-  - twitch-bot
+  - meal-notifier
+  - gh-actions
+  - terraform.nvim
   - chef
+  - vorpal
+  - todoist.nvim
+  - linear.nvim
+  - aoc
+  - timerly
+  - server_scraper
+  - mvaldes14
+  - deckmaster-config
   - pulumi
-  - k8s-apps
+  - nvim-lint
+  - asdf-tea
+  - vue-composer
+  - ELKTwitterIngestion
+  - Twitter-CLI
+  - babylog
+  - flask-reddithwswap
 base_apps:
-  - i3-wm
-  - rofi
-utilities:
-  - xclip
-  - tldr
-  - progress
-  - tree
-  - rsync
-  - rclone
-  - prettyping
-  - bat
-  - ncdu
   - neovim
-  - zsh
-  - jq
-  - fzf
-  - neofetch
   - tmux
   - fd-find
   - ripgrep
-  - stow
-  - python3-venv
-  - python3-pip
-  - unzip
-  - youtube-dl
-  - age
-cargo:
-  - xcp
-  - hyperfine
-pip:
-  - ansible-lint
-  - pre-commit
-  - molecule
-  - molecule-plugins[docker]
-  - pytest-testinfra
-npm:
-  - vite
-  - pnpm
+  - zsh
+  - tree
