--- a/roles/shell/tasks/main.yml
+++ b/roles/shell/tasks/main.yml
@@ -1,4 +1,3 @@
----
 # tasks file for shell
 - name: Tasks for shell setup
   tags:
@@ -6,12 +5,12 @@
   vars:
     shell_startship_check: "{{ lookup('env', 'STARSHIP_SHELL') }}"
     shell_zsh_check: "{{ lookup('env', 'ZSH') }}"
-    shell_asdf_check: "{{ lookup('env', 'ASDF_DIR') }}"
+    user: "mvaldes"
   block:
     - name: Clone TPM
       ansible.builtin.git:
         repo: https://github.com/tmux-plugins/tpm.git
-        dest: /home/$USER/.tmux/plugins/tpm
+        dest: "/home/{{ user }}/.tmux/plugins/tpm"
     - name: Install Oh-my-zsh
       ansible.builtin.shell:
         cmd: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
@@ -23,23 +22,18 @@
     - name: Clone ZSH Plugins
       ansible.builtin.git:
         repo: https://github.com/{{ item }}
-        dest: /home/$USER/.oh-my-zsh/custom/{{ item }}
+        dest: "/home/{{ user }}/.oh-my-zsh/custom/{{ item }}"
       with_items:
         - Aloxaf/fzf-tab.git
         - zsh-users/zsh-autosuggestions.git
         - zsh-users/zsh-syntax-highlighting.git
-    - name: Clone asdf
-      ansible.builtin.git:
-        repo: https://github.com/asdf-vm/asdf.git
-        dest: /home/$USER/.asdf
-      when: not shell_asdf_check
     - name: Kubectl Directory
       ansible.builtin.file:
-        dest: /home/$USER/.kube
+        dest: "/home/{{ user }}/.kube"
         state: directory
     - name: Link Packages
       ansible.builtin.shell:
-        cmd: cd /home/$USER/git/dotfiles/.config; stow -t /home/$USER/.config/{{ item }} {{ item }}
+        cmd: cd /home/{{ user }}/git/dotfiles/.config; stow -t /home/{{ user }}/.config/{{ item }} {{ item }}
       with_items:
         - nvim
         - zsh
@@ -48,6 +42,6 @@
     - name: Link zshenv
       ansible.builtin.file:
         mode: '755'
-        src: '/home/$USER/git/dotfiles/.zshenv'
-        dest: '/home/$USER/.zshenv'
+        src: "/home/{{ user }}/git/dotfiles/.zshenv"
+        dest: "/home/{{ user }}/.zshenv"
         state: link
