--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -6,13 +6,7 @@
       ansible.builtin.apt_repository:
         repo: ppa:neovim-ppa/unstable
         state: present
-    - name: 'Create user'
-      ansible.builtin.user:
-        name: '{{ user }}'
-        state: present
-        create_home: true
     - name: 'Install apps'
-      become: true
       ansible.builtin.apt:
         name: '{{ item }}'
         state: present
@@ -25,5 +19,8 @@
     - name: 'Clone repos'
       ansible.builtin.git:
         repo: "https://github.com/{{ git_username }}/{{ item }}.git"
-        dest: '{{ git_repo_base }}/{{ item }}'
+        dest: '/home/{{user}}//{{ git_repo_base }}/{{ item }}'
       loop: '{{ git_repos }}'
+    - name: Setup Shell
+      ansible.builtin.include_role:
+        name: shell
