--- a/roles/base/molecule/default/verify.yml
+++ b/roles/base/molecule/default/verify.yml
@@ -11,10 +11,35 @@
         name:
           - neovim
           - tmux
+          - bat
+          - git
+          - gh
+          - fzf
+        state: present
     - name: Check Repos Cloned
       ansible.builtin.stat:
         path: "/home/mvaldes/git/{{ item }}"
+      register: repo_stat
       loop:
         - vorpal
         - k8s-apps
         - twitch-bot
+        - dotfiles
+    - name: Check files are linked
+      ansible.builtin.stat:
+        path: "/home/mvaldes/.config/{{ item }}"
+      register: config_stat
+      loop:
+        - nvim
+        - zsh
+        - tmux
+        - bat
+        - atuin
+    - name: test_1
+      ansible.builtin.debug:
+        msg: "File: {{ item.item }}, Is Link: {{ item.stat.islnk }}"
+      loop: repo_stat.results
+    - name: test_2
+      ansible.builtin.debug:
+        msg: "File: {{ item.item }}, Is Link: {{ item.stat.islnk }}"
+      loop: config_stat.results
