--- a/roles/homelab/tasks/access.yml
+++ b/roles/homelab/tasks/access.yml
@@ -3,7 +3,7 @@
     user: "mvaldes"
   block:
     - name: SSH Config
-      copy:
+      ansible.builtin.copy:
         src: "sshd_config.j2"
         dest: "/etc/ssh/sshd_config"
         mode: "0644"
@@ -12,7 +12,7 @@
       notify: RestartSSH
     - name: Get Certificate
       become: true
-      get_url:
+      ansible.builtin.get_url:
         url: https://vault.mvaldes.dev/v1/ssh/public_key
         dest: "/etc/ssh/vault-cert.pub"
         mode: "0644"
