--- a/homelab/dotfiles/roles/setup/vars/main.yml
+++ b/homelab/dotfiles/roles/setup/vars/main.yml
@@ -1,3 +1,15 @@
 #SPDX-License-Identifier: MIT-0
----
 # vars file for setup
+base_apps:
+  - neovim
+  - tmux
+  - fd-find
+  - ripgrep
+  - zsh
+  - tree
+  - gh
+  - jq
+  - bind9-dnsutils
+  - htop
+  - bat
+  - fzf
