--- a/homelab/nodes/roles/setup/molecule/default/Dockerfile
+++ b/homelab/nodes/roles/setup/molecule/default/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:24.04
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
+    sudo \
     git
 
 # Install Ansible
