--- a/homelab/nodes/roles/setup/tasks/access.yml
+++ b/homelab/nodes/roles/setup/tasks/access.yml
@@ -11,7 +11,6 @@
         group: root
       notify: RestartSSH
     - name: Get Certificate
-      become: true
       ansible.builtin.get_url:
         url: https://vault.mvaldes.dev/v1/ssh/public_key
         dest: "/etc/ssh/vault-cert.pub"
@@ -19,10 +18,11 @@
     - name: Commands Without Sudo
       become: true
       community.general.sudoers:
-        name: sudoers-update
+        name: sudoers-mvaldes-nopasswd
         state: present
         user: mvaldes
         commands:
           - /usr/bin/systemctl restart ssh
           - /usr/bin/apt update
           - /usr/bin/apt upgrade
+        nopassword: true
