--- a/homelab/nodes/roles/setup/handlers/main.yml
+++ b/homelab/nodes/roles/setup/handlers/main.yml
@@ -1,5 +1,8 @@
 # handlers file for setup
 - name: RestartSSH
-  service:
+  ansible.builtin.systemd:
     name: ssh
     state: restarted
+- name: Restart Systemd Daemon
+  ansible.builtin.systemd:
+    daemon_reload: true
