--- a/homelab/dotfiles/roles/setup/tasks/main.yml
+++ b/homelab/dotfiles/roles/setup/tasks/main.yml
@@ -67,3 +67,12 @@
         state: present
         update_cache: true
       loop: '{{ base_apps }}'
+    - name: 'Create base git folder'
+      ansible.builtin.file:
+        path: '{{ username_home }}/git'
+        state: directory
+    - name: 'Clone repos'
+      ansible.builtin.git:
+        repo: "https://github.com/{{ git_username }}/{{ item }}.git"
+        dest: '{{ username_home }}/git/{{ item }}'
+      loop: '{{ git_repos }}'
