--- a/homelab/nodes/roles/setup/tasks/otel.yml
+++ b/homelab/nodes/roles/setup/tasks/otel.yml
@@ -2,6 +2,11 @@
   tags:
     - otel
   block:
+    - name: Create user
+      ansible.builtin.user:
+        name: otel
+        system: true
+        create_home: false
     - name: Check Agent Installed
       ansible.builtin.stat:
         path: /usr/local/bin/otelcol-contrib
@@ -11,27 +16,36 @@
       block:
         - name: Download Otel Agent
           ansible.builtin.get_url:
-            url: "https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.139.0/otelcol-contrib_0.139.0_linux_amd64.tar.gz"
-            dest: "/tmp/otelcol-contrib_0.139.0_linux_amd64.tar.gz"
+            url: "https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v{{otel_version}}/otelcol-contrib_{{otel_version}}_linux_{{node_arch}}.tar.gz"
+            dest: "/tmp/otelcol-contrib_{{otel_version}}_linux_amd64.tar.gz"
         - name: Unpack Otel Agent
           ansible.builtin.unarchive:
-            src: "otelcol-contrib_0.139.0_linux_amd64.tar.gz"
+            src: "/tmp/otelcol-contrib_{{otel_version}}_linux_amd64.tar.gz"
             dest: "/usr/local/bin/"
             remote_src: true
             mode: "0755"
+    - name: Create Config Directory
+      ansible.builtin.file:
+        path: /opt/otel-agent
+        state: directory
+        mode: "0755"
+        owner: "otel"
+        group: "otel"
     - name: Copy Config File
       ansible.builtin.template:
-        src: "otel-config.yml.j2"
-        dest: "/etc/otel-config.yml"
+        src: "otel-config.yaml.j2"
+        dest: "/opt/otel-agent/otel-config.yaml"
+        owner: "otel"
+        group: "otel"
         mode: "0644"
+      notify: Restart Systemd Daemon
     - name: Setup Systemd Service
       ansible.builtin.template:
         src: "otel-agent.service.j2"
         dest: "/etc/systemd/system/otel-agent.service"
         mode: "0644"
-      notify: Restart Otel Agent
     - name: Enable and Start Service
       ansible.builtin.systemd:
-        name: otel-gent
+        name: otel-agent
         enabled: true
         state: started
