--- a/homelab/nodes/roles/setup/vars/main.yml
+++ b/homelab/nodes/roles/setup/vars/main.yml
@@ -1,21 +1,3 @@
-username_home: '/home/mvaldes'
-git_username: 'mvaldes14'
-git_repos:
-  - dotfiles
-  - k8s-apps
-  - twitch-bot
-  - blog
-  - terraform
-  - dotfiles-nix
-  - ansible_playbooks
-  - meal-notifier
-  - gh-actions
-  - terraform.nvim
-  - chef
-  - vorpal
-  - todoist.nvim
-  - linear.nvim
-  - aoc
-  - server_scraper
-  - deckmaster-config
-  - pulumi
+otel_version: 0.139.0
+agent_endpoint: 'otel.local.net'
+agent_port: 80
