--- a/roles/node_setup/tasks/access.yml
+++ b/roles/node_setup/tasks/access.yml
@@ -25,9 +25,16 @@
         owner: root
         group: root
       notify: RestartSSH
+    - name: Check Vault
+      ansible.builtin.uri:
+        url: https://vault.mvaldes.dev
+        method: GET
+      ignore_errors: true
+      register: vault_check
     - name: Get Certificate
       become: true
       ansible.builtin.get_url:
         url: https://vault.mvaldes.dev/v1/ssh/public_key
         dest: "/etc/ssh/vault-cert.pub"
         mode: "0644"
+      when: vault_check.status == 200
