--- a/roles/node_setup/tasks/otel.yml
+++ b/roles/node_setup/tasks/otel.yml
@@ -7,6 +7,7 @@
         name: otel
         system: true
         create_home: false
+        groups: "root"
     - name: Check Agent Installed
       ansible.builtin.stat:
         path: /usr/local/bin/otelcol-contrib
